2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-io-channel.c:
	- #include <stdio.h>, as per #134886

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Fix leak with gtk_tree_store_set, #140546  (Morten Welinder)

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-theme.c:
	- Don't g_object_ref after gtk_style_new, #140525  (Morten Welinder)

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- s/g_free/g_strfreev/ on **paths, fixes #140524 (Morten Welinder)

2004-04-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- NULL check on priv->pager before g_object_unref, fixes #140300

2004-04-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Better handling of category_hash, as per #128914

2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-22  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.6.0

	* po/*.po:
	- Stuff distcheck likes to do

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-21  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Patch from Laszlo Peter for #134534, portable sed usage

2004-03-20  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-16  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.5.91

	* po/*.po:
	- Stuff distcheck likes to do

2004-03-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Fix for #137216, infinite loop in tree traversal.

2004-03-10  Alexander Winston  <alexander.winston@comcast.net>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-09  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.5.90

	* po/*.po:
	- Various distcheck stuff
